maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:29: error: not found: value dir
	setDirection(dir)
                     ^